--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<title>ProGamer - Ömer</title>
+<title>Bilim PortalÄ±</title>
 </head>
 <body>
 <body onload="alert('Merhaba!');">
 <font color="red" size="4" face="Comic Sans">KANALIMA ABONE OLMAYI UNUTMAYIN</font>
-YOUTUBE KANALIMA ABONE OLMAK ÝÇÝN: <a href="https://www.youtube.com/channel/UClKemQkvyNTWptTnpayco0w/featured?disable_polymer=1"> TIKLAYINIZ</a>
-<li><a href="hakkýmda.html">Hakkýmda</a></li>
+YOUTUBE KANALIMA ABONE OLMAK iÃ‡iN: <a href="https://www.youtube.com/channel/UClKemQkvyNTWptTnpayco0w/featured?disable_polymer=1"> TIKLAYINIZ</a>
+<li><a href="hakkÄ±mda.html">HakkÄ±mda</a></li>
 <body background="indir2.jpg">
 </html>
