--- a/hakkımda.html
+++ b/hakkımda.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<title>ProGamer - Ömer</title>
+<title>HakkÄ±mda</title>
 </head>
 <body>
-Merhaba ben ömer 1 yıldır youtubedayım ve youtuberım kanalımda oyun vlog challenge benzeri videolar çekiyorum kanalıma abone olamyı unutmayın iyi günler!
+Merhaba ben Ã–mer 1 yÄ±ldÄ±r youtubedayÄ±m kanalÄ±mda BÄ°LÄ°M ile ilgili videolar Ã§ekiyorum kanalÄ±ma abone olmayÄ± unutmayÄ±n iyi gÃ¼nler!
 </body>
 </html>
