--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Bilim Portalı</title>
 </head>
 <body>
-<body onload="alert('Merhaba!');">
+<body onload="alert('Merhaba Bilim Portalı kanalının internet sitesine hoşgeldin!');">
 <font color="red" size="4" face="Comic Sans">KANALIMA ABONE OLMAYI UNUTMAYIN</font>
 YOUTUBE KANALIMA ABONE OLMAK iÇiN: <a href="https://www.youtube.com/channel/UClKemQkvyNTWptTnpayco0w/featured?disable_polymer=1"> TIKLAYINIZ</a>
 <li><a href="hakkımda.html">Hakkımda</a></li>
