--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <font color="red" size="4" face="Comic Sans">KANALIMA ABONE OLMAYI UNUTMAYIN</font>
 YOUTUBE KANALIMA ABONE OLMAK iÇiN: <a href="https://www.youtube.com/channel/UClKemQkvyNTWptTnpayco0w/featured?disable_polymer=1"> TIKLAYINIZ</a>
 <li><a href="hakkımda.html">Hakkımda</a></li>
-<li><a href="https://www.youtube.com/channel/UClKemQkvyNTWptTnpayco0w">Kanalım!</a></li>
+<li><a link="https://www.youtube.com/channel/UClKemQkvyNTWptTnpayco0w">Kanalım!</a></li>
 </body)
 </html>
