--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 YOUTUBE KANALIMA ABONE OLMAK iÇiN: <a href="https://www.youtube.com/channel/UClKemQkvyNTWptTnpayco0w/featured?disable_polymer=1"> TIKLAYINIZ</a>
 <li><a href="hakkımda.html">Hakkımda</a></li>
 <li><a link="https://www.youtube.com/channel/UClKemQkvyNTWptTnpayco0w">Kanalım!</a></li>
+<img src="unnamed.jpg" alt="Kanalım!"/>
 </body)
 </html>
