--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ YOUTUBE KANALIMA ABONE OLMAK iÇiN: <a href="https://www.youtube.com/channel/UCl
 <li><a href="hakkımda.html">Hakkımda</a></li>
 <li><a link="https://www.youtube.com/channel/UClKemQkvyNTWptTnpayco0w">Kanalım!</a></li>
 <img src="unnamed.jpg" alt="Kanalım!"/>
-<body bgcolor="Grey">
+<body bgcolor="Light Blue">
   
   
 </html>
