--- a/index.html
+++ b/index.html
@@ -11,5 +11,19 @@ YOUTUBE KANALIMA ABONE OLMAK iÇiN: <a href="https://www.youtube.com/channel/UCl
 <img src="unnamed.jpg" alt="Kanalım!"/>
 <body bgcolor="green">
   
+  <div id="fb-yorum"></div>
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({appId: 'api kodunuzu buraya yazın', status: true, cookie: true,
+             xfbml: true});
+  };
+  (function() {
+    var e = document.createElement('script'); e.async = true;
+    e.src = document.location.protocol +
+      '//connect.facebook.net/en_US/all.js';
+    document.getElementById('fb-yorum').appendChild(e);
+  }());
+</script>
+  
   
 </html>
