--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@ YOUTUBE KANALIMA ABONE OLMAK iÇiN: <a href="https://www.youtube.com/channel/UCl
 <img src="unnamed.jpg" alt="Kanalım!"/>
 <body bgcolor="green">
   
-<li><a href="yorum.php">Yorum Yap</a></li>
+<li><a href="yorum.html">Yorum Yap</a></li>
   
 </html>
