--- a/üye.html
+++ b/üye.html
@@ -1,106 +1,96 @@
-section{
-background:rgba(225, 225, 225, 0.4);
-margin:0 auto;
-width:300px;
-padding:20px;
-text-align:center;
--webkit-border-radius: 10px;
--moz-border-radius: 10px;
-border-radius: 10px;
--webkit-box-shadow:0 0 65px rgba(0,0,0,0.2);
--moz-box-shadow:0 0 65px rgba(0,0,0,0.2);
-box-shadow:0 0 65px rgba(0,0,0,0.2);
-}
- 
-.giris-yap {
-margin:5px 5px 15px 5px;
-width:120px;
-padding:10px;
-outline:none;
--webkit-border-radius: 4px;
--moz-border-radius: 4px;
-border-radius: 4px;
-border:none;
-background:rgba(225, 225, 225, 0.5);
-font:0.7em Arial;
-color:#fff;
-transition: all .3s ease-in-out;
--moz-transition: all .3s ease-in-out;
--webkit-transition: all .3s ease-in-out;
-}
- 
-.giris-yap:focus {
-background:#fff;
-transition: all .3s ease-in-out;
--moz-transition: all .3s ease-in-out;
--webkit-transition: all .3s ease-in-out;
-color:#1d2b37;
-}
- 
-button{
-border:none;
-padding:17px;
-width:100%;
-color:white;
-letter-spacing:2px;
-text-shadow:1px 1px 0px rgba(0, 0, 0, 0.5);
-cursor:pointer;
--webkit-border-radius: 4px;
--moz-border-radius: 4px;
-border-radius: 4px;
-margin-top:5px;
-font-family: Helvetica, serif;
-background: #fff6e4;
-background: -moz-linear-gradient(top,#8b9da9 0%, #687e8d 100%);
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#8b9da9), color-stop(100%,#687e8d));
-background: -webkit-linear-gradient(top,#8b9da9 0%,#687e8d 100%);
-background: -o-linear-gradient(top,#8b9da9 0%,#687e8d 100%);
-background: -ms-linear-gradient(top,#8b9da9 0%,#687e8d 100%);
-background: linear-gradient(to bottom,#8b9da9 0%,#687e8d 100%);
-}
- 
-button:active {
-box-shadow:inset 0px 2px 1px rgba(0, 0, 0, 0.4);
-}
- 
-.radio-button{
--webkit-appearance: none;
-margin:15px 0 0 70px;
-background-color:#687e8d;
-padding: 9px;
-border-radius: 3px;
-display: inline-block;
-position: relative;
-transition: all .3s ease-in-out;
--moz-transition: all .3s ease-in-out;
--webkit-transition: all .3s ease-in-out;
-}
- 
-.radio-button:checked {
-background-color: #fff;
-color: #fff;
-transition: all .3s ease-in-out;
--moz-transition: all .3s ease-in-out;
--webkit-transition: all .3s ease-in-out;
-}
- 
-.radio-button:checked:after {
-content: '\2714';
-font-size: 14px;
-position: absolute;
-top: 1px;
-left: 3px;
-color: #000;
-}
- 
-h2,h3 {
-display:inline-block;
-position:relative;
-bottom:5px;
-margin:0px;
-left:6px;
-color:white;
-font: 300 0.8em Arial;
-}
- 
-h3{float:left; margin-top:20px; border-bottom:1px dotted white;}
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<title>Untitled Document</title>
+<style type="text/css">
+#form1 #sifre { background-color: #00CCFF; }
+#form1 #sifret { background-color: #00CCFF; }
+</style>
+</head>
+<body>
+<form id="form1" name="form1" method="post" action="">
+  <table bgcolor="#FFCC99" width="318" border="0" cellspacing="0" cellpadding="0">
+    <tr>
+	 <td height="48" colspan="2" align="center">ÜYELIK FORMU	 </td>
+	</tr>
+		<tr>
+      <td width="117" height="27">Ad&#305;n&#305;z</td>
+      <td width="195"><label>
+        <input name="ad" type="text" id="ad" value="Ordu" />
+      </label></td>
+    </tr>
+    <tr>
+      <td>Soyad&#305;n&#305;z</td>
+      <td><label>
+        <input name="soyad" type="text" id="soyad" />
+      </label></td>
+    </tr>
+    <tr>
+      <td>&Uuml;ye Ad&#305; </td>
+      <td><label>
+        <input name="uyead" type="text" id="uyead" />
+      </label></td>
+    </tr>
+    <tr>
+      <td>E-posta</td>
+      <td><label>
+        <input name="eposta" type="text" id="eposta" />
+      </label></td>
+    </tr>
+    <tr>
+      <td>&#350;ifre</td>
+      <td><label>
+        <input name="sifre" type="password" id="sifre" size="15" maxlength="8" />
+      </label></td>
+    </tr>
+    <tr>
+      <td>&#350;ifre T. </td>
+      <td><label>
+        <input name="sifret" type="password" id="sifret" size="15" maxlength="8" />
+      </label></td>
+    </tr>
+    <tr>
+      <td><label> <br />
+        <input name="gonder" type="submit" id="gonder" value="G&ouml;nder" />
+      </label></td>
+      <td><label> <br />
+        <input name="sil" type="reset" id="sil" value="Sil" />
+      </label></td>
+    </tr>
+  </table>
+</form>
+<br /><br /><br />
+<form id="form2" action="" method="get">
+  <table bgcolor="#CCFFFF" width="523" border="0" cellspacing="0" cellpadding="0">
+  <tr>
+	 <td height="48" colspan="2" align="center">ziyaretci formu	 </td>
+	</tr>
+    <tr>
+      <td width="170">Ad&#305;-Soyad&#305;</td>
+      <td width="353"><label>
+        <input type="text" name="textfield" />
+      </label></td>
+    </tr>
+    <tr>
+      <td>E-posta</td>
+      <td><label>
+        <input type="text" name="textfield2" />
+      </label></td>
+    </tr>
+    <tr>
+      <td>Mesaj&#305;n&#305;z</td>
+      <td><label>
+        <textarea name="textfield3" cols="50" rows="10"></textarea>
+      </label></td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td><label>
+        <input name="gonder" type="submit" id="gonder" value="G&ouml;nder" />
+        <input name="sil" type="reset" id="sil" value="Sil" />
+      </label></td>
+    </tr>
+  </table>
+</form>
+</body>
+</html>
